Cleanups
Reorder things to be age, docs, size more consistently, and a few
'this way, not that way' changes.